added article delete, put, patch apis
