# src/api/v1/article/routes/index.js
@@ -1,5 +1,12 @@
 const authenticate = require("../../../../middleware/authenticate");
-const { findAllItem, createItem, findSingleItem } = require("../controller");
+const {
+  findAllItem,
+  createItem,
+  findSingleItem,
+  deleteArticle,
+  updateOrCreate,
+  updateItem,
+} = require("../controller");
 
 const ArticleRouters = (router) => {
   router
@@ -10,6 +17,9 @@ const ArticleRouters = (router) => {
   router
     .route("/api/v1/article/:id")
     .get(findSingleItem)
+    .delete(authenticate, deleteArticle)
+    .put(authenticate, updateOrCreate)
+    .patch(authenticate, updateItem);
 };
 
 module.exports = ArticleRouters;
